@@ -28,6 +28,7 @@ import classfit.example.classfit.student.domain.Student;
 import classfit.example.classfit.student.dto.StudentList;
 import classfit.example.classfit.studentExam.domain.Exam;
 import classfit.example.classfit.studentExam.domain.ExamRepository;
+import classfit.example.classfit.studentExam.domain.Standard;
 import classfit.example.classfit.studentExam.domain.StudentExamScore;
 import classfit.example.classfit.studentExam.domain.StudentExamScoreRepository;
 import classfit.example.classfit.studentExam.dto.process.ExamHistory;
@@ -118,9 +119,10 @@ public class ScoreReportService {
 
 
     @Transactional(readOnly = true)
-    public List<ReportExam> showReportExam(@AuthMember Member member, LocalDate startDate, LocalDate endDate, Long mainClassId,
+    public List<ReportExam> showReportExam(@AuthMember Member member, LocalDate startDate,
+            LocalDate endDate, Long mainClassId,
             Long subClassId) {
-        validateAcademy(member,member.getAcademy().getId());
+        validateAcademy(member, member.getAcademy().getId());
         List<ReportExam> reports = scoreReportRepository.findExamsByCreatedAtBetween(startDate,
                 endDate, mainClassId, subClassId);
         return reports.stream()
@@ -145,7 +147,7 @@ public class ScoreReportService {
         SubClass subClass = subClassRepository.findById(subClassId)
                 .orElseThrow(
                         () -> new ClassfitException("서브 클래스를 찾을 수 없어요.", HttpStatus.NOT_FOUND));
-        validateAcademy(member,mainClass.getAcademy().getId());
+        validateAcademy(member, mainClass.getAcademy().getId());
         List<ScoreReport> studentReports = scoreReportRepository.findAllReportsByMainClassAndSubClass(
                 mainClassId, subClassId);
 
@@ -186,7 +188,7 @@ public class ScoreReportService {
 
     @Transactional
     public void deleteReport(@AuthMember Member member, Long studentReportId) {
-        validateAcademy(member,member.getAcademy().getId());
+        validateAcademy(member, member.getAcademy().getId());
         scoreReportRepository.deleteById(studentReportId);
     }
 
@@ -238,10 +240,10 @@ public class ScoreReportService {
     @Transactional(readOnly = true)
     public ShowStudentReportResponse showStudentReport(@AuthMember Member member, Long reportId) {
         ScoreReport scoreReport = scoreReportRepository.findById(reportId)
-                .orElseThrow(
-                        () -> new ClassfitException("학습리포트를 찾을 수 없어요.", HttpStatus.NOT_FOUND));
+                .orElseThrow(() -> new ClassfitException("학습리포트를 찾을 수 없어요.", HttpStatus.NOT_FOUND));
 
         validateAcademy(member, scoreReport.getMainClass().getAcademy().getId());
+
         List<AttendanceInfo> attendanceInfoList = scoreReport.getStudent().getAttendances().stream()
                 .collect(Collectors.groupingBy(
                         Attendance::getStatus,
@@ -254,9 +256,11 @@ public class ScoreReportService {
                         entry.getValue()
                 ))
                 .toList();
+
         Integer totalAttendanceCount = attendanceInfoList.stream()
                 .mapToInt(AttendanceInfo::attendanceCount)
                 .sum();
+
         List<StudentExamScore> studentExamScores = studentExamScoreRepository.findByScoreReport(
                 scoreReport);
 
@@ -265,6 +269,41 @@ public class ScoreReportService {
                         .equals(scoreReport.getId()))
                 .map(studentExamScore -> {
                     Exam exam = studentExamScore.getExam();
+
+                    if (exam.getStandard() == Standard.PF) {
+                        long pCount = studentExamScoreRepository.countByExamAndScore(exam, -3);
+                        long fCount = studentExamScoreRepository.countByExamAndScore(exam, -4);
+
+                        exam.updateAverage(pCount > fCount ? 100 : 0);
+
+                        // PF 일때
+                        return new ExamHistory(
+                                exam.getId(),
+                                exam.getExamName(),
+                                exam.getStandard(),
+                                exam.getAverage(),
+                                studentExamScore.getScore()
+                        );
+                    }
+                    if (exam.getStandard() == Standard.QUESTION) {
+
+                        double maxScore = exam.getHighestScore();
+
+                        double convertedScore =
+                                (double) studentExamScore.getScore() / maxScore * 100.0;
+
+                        double convertedAverage = (double) exam.getAverage() / maxScore * 100.0;
+
+                        return new ExamHistory(
+                                exam.getId(),
+                                exam.getExamName(),
+                                exam.getStandard(),
+                                Math.round(convertedAverage),
+                                (int) Math.round(convertedScore)
+                        );
+                    }
+
+                    // score 일때
                     return new ExamHistory(
                             exam.getId(),
                             exam.getExamName(),
@@ -273,7 +312,7 @@ public class ScoreReportService {
                             studentExamScore.getScore()
                     );
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         return new ShowStudentReportResponse(
                 scoreReport.getStudent().getId(),
@@ -290,8 +329,8 @@ public class ScoreReportService {
                 scoreReport.getOverallOpinion(),
                 scoreReport.getStudentOpinion()
         );
-
     }
+
 
     private void validateAcademy(Member member, Long academyId) {
         Academy academy = academyRepository.findById(academyId)
